--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Machine Learning Course Project"
+title: "Machine Learning Course Project- Monitoring: How well did you do it?"
 author: "Peter Olsen"
 date: "October 5, 2016"
 output: html_document
@@ -9,7 +9,46 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Course Project, IOT Device
+## Executive Summary
+This project will explore the data set from "Qualitative Activity Recognition of Weight Lifting Exercises" study that recorded inputs from sensors to determine how people are doing a dumbbell curl.  A Prediction model based on this data will be developed to predict the manner in which subjects did the excercise and to test the model for accuracy.
+
+## Data Exploration
+This is a farily large data set with 160 variables.  Some of the variables are summary data that I did not find useful.  They did not work well for prediction and there were a lot of missing data points in them.  
+Another variable, num_window is perfectly correlated to classe because of how the testing was structured in time intervales, but I do not feel it is a variable that is in the spirit of the testing or one that would show up in future data so I have chosen to eliminate it.
+I found 48 variables to be related to the testing described and used them for building my model.  These variables are directly related to the sensors on the belt, arm, bumbell and forearm.
+
+
+```{r}
+rm(list=ls())
+setwd("~/Documents/datasciencecoursera/MachineLearning/Project/")
+train <- read.csv("pml-training.csv")
+test <- read.csv("pml-testing.csv")
+require(dplyr)
+train1 <- subset(train, , -c(1:36,50:59,69:83,87:100))
+train2 <- subset(train1, , -c(amplitude_yaw_dumbbell, 28:37, 50:64, 66:75))
+dim(train2)
+```
+
+## The model
+### 1. Model selection.
+I looked at 3 training methods, Random Forest, Linear Digression Models and Boosting (gmb).  
+The model builds are shown in the appendix.
+I found the Random forest model to be the most accurate.
+
+2. Cross validation
+
+3. expected out of sample error
+ 
+
+
+## Appendix
+CODE:
+
+## Refferences
+1. Velloso, E.; Bulling, A.; Gellersen, H.; Ugulino, W.; Fuks, H. Qualitative Activity Recognition of Weight Lifting Exercises. Proceedings of 4th International Conference in Cooperation with SIGCHI (Augmented Human '13) . Stuttgart, Germany: ACM SIGCHI, 2013. 
+http://groupware.les.inf.puc-rio.br/har
+
+
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
